# Examiner

./: .env  .env.example  .gitignore  README.md  docker-compose.yml  langgraph.json  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
config/: agent.yaml
db/: schema.sql
db/migrations/: 001_init.sql  002_agents.sql  003_agents_user_id.sql
scripts/: agent_chat.py  download_kokoro.py  gemini_probe.py  provider_smoke.py  stt_smoke.py  tts_smoke.py  vad_smoke.py
src/UI/: package-lock.json  package.json
src/UI/app/: globals.css  layout.tsx
src/UI/app/(dashboard)/: layout.tsx
src/UI/app/login/: page.tsx
src/UI/components/agents/: agent-card.tsx  agents-table.tsx  create-agent-form.tsx
src/UI/components/auth/: login-form.tsx
src/UI/components/layout/: app-header.tsx  app-sidebar.tsx  mobile-nav.tsx  nav-item.tsx  sign-out-item.tsx  user-profile.tsx
src/UI/components/playground/: chat-panel.tsx  voice-controls.tsx  (+1 more)
src/UI/lib/: auth.ts  mock-data.ts  nav.ts  types.ts  utils.ts  voice-api-forward.ts  voice-api.ts
src/agent/: __init__.py  ack.py  config.py  context.py  errors.py  events.py  runtime.py  subagents.py  tracing.py
src/agent/db/: migrations.py  pool.py  repo.py
src/agent/mcp/: registry.py
src/agent/providers/: base.py  factory.py  gemini.py  ollama.py
src/agent/tools/: base.py  schema.py
src/examiner/: agent.py  model.py  prompts.py  state.py  tools.py
src/examiner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/voice/: __init__.py  agent_base.py  agent_langgraph.py  agent_registry.py  agent_runtime.py  app.py  livekit_agent.py  livekit_models.py  sentencizer.py  session.py  speech_normalizer.py  stt.py  tester.py  tts.py  vad.py
supabase/: docker-compose.yml
supabase/migrations/: 20260507000000_examiner_schema.sql
tests/: test_agent_registry.py  test_gemini_provider.py  test_runtime_voice_agent.py  test_sentencizer.py  test_speech_normalizer.py  test_subagents.py  test_voice_config.py  test_voice_session_speech.py  voice_latency.py
(+46 files in other folders)
