[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "examiner"
version = "0.1.0"
description = "A basic LangChain DeepAgent that conducts oral exams on a given topic."
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.0.5",
    "langgraph>=0.2.55",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-ollama>=0.2.0",
    "python-dotenv>=1.0.0",
    "pip>=26.1",
]

[project.optional-dependencies]
dev = ["langgraph-cli[inmem]>=0.1.55"]

[tool.setuptools.packages.find]
where = ["src"]
